--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <script>
 setTimeout(function(){
-window.location.href = "https://www.bioherby.de/";
+window.location.href = "https://www.amsterdamtours.app/";
 }, 500);
 </script>
 </head>
